# AutoFlux

./: .gitignore  README.md  compose_build.sh  docker-compose.yml  restart_compsose.sh
assets/: Spark_Internal_Communication_Flow.csv
ingestion/: Dockerfile
ml/: .gitignore  Dockerfile  README.md  install_spark_dependencies.py  pyproject.toml  start_server.sh  test.py
ml/notebooks/: run_training.ipynb
ml/src/: __init__.py  ml-compose.yaml  test.py
ml/src/generic/: predictor.py  run_trainer.py
ml/src/training/: lightgbm.py  logistic_regression.py  run_trainer.py  utils.py
ml/src/utils/: config_reader.py
ml/src/utils/traditional_ml/: constants.py  trainer.py  tuner.py
mlflow/: Dockerfile
postgres-server/: Dockerfile  entrypoint.sh  hive-schema.sql  hive-site.xml
spark-server/: Dockerfile  entrypoint_master.sh  entrypoint_worker.sh  hive-site.xml
transformation/: .gitignore  .user.yml  Dockerfile  README.md  check_thrift.py  dbt_project.yml  entrypoint.sh  profiles.yml  test.py  test_basic.py
transformation/ingestion/: __main__.py  utils.py
transformation/metastore_db/: db.lck  service.properties
transformation/metastore_db/log/: logmirror.ctrl
transformation/models/: sources.yml
